keycloak/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: keycloak
  name: keycloak-service
  namespace: file-share
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
  selector:
    app: keycloak
